# SIH

./: README.md  main.py  pyproject.toml  requirements.txt
models/: best_neural_network_model.h5
src/config/: __init__.py  settings.py
src/data/: __init__.py  data_processor.py  synthetic_generator.py
src/models/: __init__.py  model_trainer.py  neural_network.py
src/utils/: __init__.py  logger.py  visualization.py
